--- a/related.html
+++ b/related.html
@@ -14,7 +14,7 @@
   </head>
   <body onload="relatedScreen()">
     <div class="contant_return">
-      <a href="index.html">
+      <a href="./index.html">
         <button
         class="button is-dark is-rounded "
         onclick="relatedScreen()"
