--- a/related.html
+++ b/related.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Related</title>
 
-    <link rel="stylesheet" href="../related.css" />
+    <link rel="stylesheet" href="./related.css" />
 <link 
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
