cria alteração no caminho dos scripts

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       </div>
     </div>
 
-    <script src="../bd.js"></script>
-    <script src="../script.js"></script>
-    <script src="../script_one_pag.js"></script>
+    <script src="./bd.js"></script>
+    <script src="./script.js"></script>
+    <script src="./script_one_pag.js"></script>
   </body>
 </html>
