--- a/main.html
+++ b/main.html
@@ -79,8 +79,8 @@
       <p class="beach__area_judge--black">judge</p>
     </div>
 
-    <script src="../bd.js"></script>
-    <script src="../script.js"></script>
-    <script src="../related.js"></script>
+    <script src="./bd.js"></script>
+    <script src="./script.js"></script>
+    <script src="./related.js"></script>
   </body>
 </html>
