--- a/related.html
+++ b/related.html
@@ -42,8 +42,8 @@
       </div>
     </div>
 
-    <script src="../bd.js"></script>
-    <script src="../script.js"></script>
-    <script src="../related.js"></script>
+    <script src="./bd.js"></script>
+    <script src="./script.js"></script>
+    <script src="./related.js"></script>
   </body>
 </html>
