cria media query

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="header">
-
+     
     </header>
 
     <div class="container">
@@ -51,6 +51,9 @@
 
       </div>
     </div>
+    <Footer>
+      <p>creating by Ivan Martins for Pedro Souza</p>
+    </Footer>
 
     <script src="./bd.js"></script>
     <script src="./script.js"></script>
