--- a/related.html
+++ b/related.html
@@ -11,6 +11,10 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
   />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,600&family=Roboto:wght@900&display=swap" rel="stylesheet">
   </head>
   <body onload="relatedScreen()">
     <div class="contant_return">
