ajuste tela inicial e timer tela principal

--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
         id="heat"
         class="input is-rounded"
         type="text"
-        placeholder="ROUND-HEAT"
+        placeholder="ROUND"
+      />
+        <input
+        id="heat"
+        class="input is-rounded"
+        type="text"
+        placeholder="HEAT"
       />
           <!-- last_input -->
           <input
