Feat: create section with graphic

--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
   <body>
     <div class="timer">
       <button
-        class="button is-dark is-rounded button_time"
+        class="button is-dark is-rounded button_time is-small"
         onclick="timeBateri()"
       >
         Start Time
@@ -22,11 +22,17 @@
 
       <a href="related.html" class="link_related">
         <button
-          class="button is-dark is-rounded link"
+          class="button is-dark is-rounded button_related link is-small"
           onclick="relatedScreen()"
         >
-          Related
+          Relatótio
         </button></a
+      >
+
+      <a
+        href="./index.html"
+        class="button is-black is-outlined is-rounded is-small telaInicial"
+        >Tela inicial</a
       >
 
       <h3 class="timeDisplay"></h3>
