--- a/related.html
+++ b/related.html
@@ -18,14 +18,25 @@
   </head>
   <body onload="relatedScreen()">
     <div class="contant_return">
-      <a href="./index.html">
+      <a href="./main.html">
         <button
-        class="button is-dark is-rounded "
+        class="button is-dark is-rounded is-small"
         onclick="relatedScreen()"
       >
         Return
       </button>      </a>
+
     </div>
+    <div class="deleted" onclick="deleteRelated()
+    ">
+      <button class="button is-danger is-outlined is-small is-rounded del">
+        <span>Delete</span>
+        <span class="icon is-small">
+        </span>
+      </button>
+  </div>
+  <a href="./grafic.html" class="button is-warning is-outlined is-rounded is-small grafico">Grafico</a>
+
     <!-- <button onshow="relatedScreen()">teste local</button> -->
     <div class="container">
       <div class="statusEvent">
